fixed overflow and auto correct for real

--- a/public/style/stylechat.css
+++ b/public/style/stylechat.css
@@ -106,21 +106,25 @@ h3{
   	 width: 100%;
   	 height:50vh;
   	 float: left; 
+  	 border-top: 1px;
   	 margin-bottom: 20px;
-  	 border-top: 1px 
 }
 
 .content .chatcontainer .chatbox{
+	 margin: auto;
+	 display: inline-block;
   	 width: 100%;
   	 height:90%;
-  	 max-height: 90%;
-  	 overflow-y: auto;
   	 float: left; 
-  	 display: table;
+  	 border-top: 1px;
+  	 padding-top: 5px;
+
+  	 float: left; 
 
   	border-top: 1px;
     border-top-color: #b3b3b3;
     border-top-style: solid;
+    overflow-y: scroll;
 }
 
 .chatcontainer .chatbox .chat-object{
@@ -152,11 +156,9 @@ h3{
 	clear:left;
 }
 .chatcontainer .chatbox .msgWrapper{
-	display: table-cell;
     vertical-align: bottom;
     padding: 5px;
     height: 100%;
-
     overflow-y:scroll;
     overflow-x:hidden;
 
